footer spacing correction

--- a/resources/projects/landscape/resources/styles/style.css
+++ b/resources/projects/landscape/resources/styles/style.css
@@ -128,7 +128,7 @@ footer {
   padding: 1rem;
   margin-top: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
